# SYCL-ray-tracing

./: .gitignore  CMakeLists.txt  README.md
data/: cornell.mtl
data/OBJs/: MIS.mtl  cornell_pbr.mtl  pbrt_dragon.mtl  test_triangle_area_sampling.mtl
include/: bounding_volume.h  bvh.h  bvh_constants.h  bvh_tests.h  camera.h  color.h  flattened_bvh.h  hit_info.h  image.h  mat.h  parsed_obj.h  ray.h  render_kernel.h  simple_material.h  sphere.h  tests.h  triangle.h  utils.h  vec.h  xorshift.h
source/: bvh.cpp  camera.cpp  color.cpp  flattened_bvh.cpp  image_io.cpp  main.cpp  mat.cpp  render_kernel.cpp  sphere.cpp  tests.cpp  triangle.cpp  utils.cpp  vec.cpp
